2003-06-22  Derek Atkins  <derek@ihtfp.com>

	* src/report/standard-reports/category-barchart.scm: Properly
	  reverse the balances of accounts instead of using the internal
	  functions to determine when to reverse.  Fixes #115268.

2003-06-19  Chris Lyttle  <chris@wilddev.net>

	* src/scm/help-topics-index.scm: add Jon Lapham's patch

2003-06-18  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/druid-hbci-initial.c: Tolerate some
	banks' failure of the GetSystemId-job.

2003-06-17  Chris Lyttle  <chris@wilddev.net>

	* src/scm/help-topics-index.scm: add Jon Lapham's patch

2003-06-17  Derek Atkins  <derek@ihtfp.com>

	* src/engine/QueryNew.h: change QUERY_FIRST_TERM to a #define.
	  It does not need to be part of the enum (it's not even used anywhere)
	* src/engine/QueryCore.h: gint32 prints as a "%d", not a "%ld".

	* src/business/business-core/gncBillTerm.c: fix gncBillTermCopy()
	  so it PROPERLY copies the bill term.  Oops!
	* src/business/business-core/file/gnc-tax-table-xml-v2.c:
	  when rebuilding the refcount, make sure we fix the grandparent
	  problems first so we refcount the correct object.
	* src/business/business-core/file/gnc-bill-term-xml-v2.c:
	  when rebuilding the refcount, make sure we fix the grandparent
	  problems first so we refcount the correct object.  Also cope
	  with the broken gncBillTermCopy() and hope that the existing
	  parent is correct.

2003-06-16  David Hampton  <hampton@employees.org>

	* src/gnome/window-register.c: Register with the component manager
	for ACCOUNT events.  Redo the window title when an event is
	received. Fixes #113164.

	* src/app-utils/gnc-component-manager.c: Enhance debugging.

2003-06-15  David Hampton  <hampton@employees.org>

	* src/gnome/gnc-split-reg.c:
	* src/gnome/window-register.c:
	* src/gnome/glade/register.glade:
	* src/register/ledger-core/split-register.c: Add new menu items
	and functions for voiding, un-voiding, and reversing transactions.
