@@ -117,6 +117,14 @@ file_session_begin(Backend *be_start, GNCSession *session, const char *book_id,
             g_free (be->dirname); be->dirname = NULL;
             return;
         }
+        rc = stat (be->fullpath, &statbuf);
+        if (rc != 0 || S_ISDIR(statbuf.st_mode))
+        {
+            xaccBackendSetError (be_start, ERR_FILEIO_UNKNOWN_FILE_TYPE);
+            g_free (be->fullpath); be->fullpath = NULL;
+            g_free (be->dirname); be->dirname = NULL;
+            return;
+        }
     }
 
     /* ---------------------------------------------------- */
