@@ -4,6 +4,9 @@
 	  reverse the balances of accounts instead of using the internal
 	  functions to determine when to reverse.  Fixes #115268.
 
+	* src/backend/file/gnc-backend-file.c: Apply sam's patch:
+	  don't allow selection of directory for save file
+
 2003-06-19  Chris Lyttle  <chris@wilddev.net>
 
 	* src/scm/help-topics-index.scm: add Jon Lapham's patch
